--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "ext-xsl": "*",
         "ext-zip": "*",
         "lib-libxml": "*",
-        "bleez/correios": "^0.0.1",
         "braintree/braintree_php": "3.35.0",
         "colinmollenhour/cache-backend-file": "~1.4.1",
         "colinmollenhour/cache-backend-redis": "1.11.0",
@@ -37,6 +36,7 @@
         "composer/composer": "^1.6",
         "elasticsearch/elasticsearch": "~7.6",
         "guzzlehttp/guzzle": "^6.3.3",
+        "imaginationmedia/correios": "^1.2",
         "laminas/laminas-captcha": "^2.7.1",
         "laminas/laminas-code": "~3.3.0",
         "laminas/laminas-config": "^2.6.0",
