Mercado pago e pagarme boleto

--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,9 @@
         "magento/composer": "1.6.x-dev",
         "magento/magento-composer-installer": ">=0.1.11",
         "magento/zendframework1": "~1.14.2",
+        "mercadopago/magento2-plugin": "3.*",
         "monolog/monolog": "^1.17",
+        "pagarme/pagarme-php": "2.0",
         "paragonie/sodium_compat": "^1.6",
         "pelago/emogrifier": "^2.0.0",
         "php-amqplib/php-amqplib": "~2.7.0||~2.10.0",
